[gd_scene load_steps=2 format=3 uid="uid://g5qrm3ptlru0"]

[ext_resource type="Script" path="res://Scenes/GameMainScreenScenes/GameScenes/UpgradeSection/upgrade_item.gd" id="1_yqv4l"]

[node name="UpgradeItem" type="MarginContainer"]
script = ExtResource("1_yqv4l")

[node name="Color" type="ColorRect" parent="."]
custom_minimum_size = Vector2(225, 90)
layout_mode = 2
color = Color(0.247059, 0.32549, 0.32549, 1)

[node name="VBox" type="VBoxContainer" parent="Color"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MC" type="MarginContainer" parent="Color/VBox"]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 6

[node name="NameLabel" type="Label" parent="Color/VBox/MC"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Wood 1"

[node name="NrLabel" type="Label" parent="Color/VBox/MC"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 16
text = "10"
horizontal_alignment = 2

[node name="MC2" type="MarginContainer" parent="Color/VBox"]
layout_mode = 2
theme_override_constants/margin_right = 8

[node name="PriceLabel" type="Label" parent="Color/VBox/MC2"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "10 wood"
horizontal_alignment = 2

[node name="MC3" type="MarginContainer" parent="Color/VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 5

[node name="HBox" type="HBoxContainer" parent="Color/VBox/MC3"]
layout_mode = 2
theme_override_constants/separation = 13
alignment = 1

[node name="MC" type="MarginContainer" parent="Color/VBox/MC3/HBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_bottom = 0

[node name="BuyButton" type="Button" parent="Color/VBox/MC3/HBox/MC"]
layout_mode = 2
size_flags_vertical = 4
theme_override_font_sizes/font_size = 12
text = "Buy"

[node name="MC2" type="MarginContainer" parent="Color/VBox/MC3/HBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BuyMaxButton" type="Button" parent="Color/VBox/MC3/HBox/MC2"]
layout_mode = 2
size_flags_vertical = 4
theme_override_font_sizes/font_size = 12
text = "Buy Max"

[node name="MC3" type="MarginContainer" parent="Color/VBox/MC3/HBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_bottom = -11

[node name="LevelLabel" type="Label" parent="Color/VBox/MC3/HBox/MC3"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "5 / 15"
horizontal_alignment = 2
vertical_alignment = 2

[node name="CantAffordColorRect" type="ColorRect" parent="."]
layout_mode = 2
color = Color(0.513726, 0.0941176, 0, 0.301961)

[connection signal="button_down" from="Color/VBox/MC3/HBox/MC/BuyButton" to="." method="_on_buy_button_button_down"]
[connection signal="button_down" from="Color/VBox/MC3/HBox/MC2/BuyMaxButton" to="." method="_on_buy_max_button_button_down"]
